# iam_platform

./: .env  Cargo.toml
migrations/: 20260630144916_create_users_table.sql  20260702043803_create_organizations.sql  20260702043819_create_rbac_tables.sql
src/: main.rs
src/handlers/: auth.rs  organization.rs
src/middleware/: auth.rs
src/models/: auth.rs  mod.rs  organization.rs  rbac.rs
