[package]
name = "iam_platform"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.7"
tokio = { version = "1.37", features = ["full"] }
sqlx = { version = "0.7", features = ["runtime-tokio", "tls-rustls", "postgres", "uuid", "chrono"] }
dotenvy = "0.15" # For loading environment variables from a .env file
serde = { version = "1.0", features = ["derive"] } # For JSON serialization
serde_json = "1.0"
argon2 = "0.5"
jsonwebtoken = "10.4.0"
chrono = "0.4.45"
